--- a/helper_functions/subgraph_utils.ipynb
+++ b/helper_functions/subgraph_utils.ipynb
@@ -348,17 +348,16 @@
     "        snap_lst['token_order'] = snap_lst.groupby('pool_date_id')['pool_date_id'].cumcount() + 1\n",
     "        pool_lst['token_order'] = pool_lst.groupby('pool_id')['pool_id'].cumcount() + 1\n",
     "\n",
-    "        snap_lst['dt'] = pd.to_datetime(snap_lst['timestamp'], unit='s').dt.date\n",
+    "        snap_lst['date'] = pd.to_datetime(snap_lst['timestamp'], unit='s').dt.date\n",
     "\n",
     "        data_df = snap_lst.merge(pool_lst,on='token_order',how='left')\n",
-    "        data_df = data_df.merge(prices,on=['inputTokens_id','dt'],how='left')\n",
+    "        data_df = data_df.merge(prices,on=['inputTokens_id','date'],how='left')\n",
     "        data_df['token_price'] = data_df['price'].combine_first(data_df['inputTokens_lastPriceUSD']) #prefer defillama's 'price'\n",
     "\n",
     "        data_df['token_balance'] = data_df['inputTokenBalances'] / 10**data_df['inputTokens_decimals']\n",
     "        data_df['usd_balance'] = data_df['token_balance'] * data_df['token_price']\n",
     "\n",
     "        data_df = data_df.rename(columns={\n",
-    "                'dt':'date',\n",
     "                'symbol':'token',\n",
     "                'token_balance':'token_value',\n",
     "                'usd_balance':'usd_value'\n",
