--- a/op_rewards_tracking/pull_simple_deployment_stats.ipynb
+++ b/op_rewards_tracking/pull_simple_deployment_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results available at https://dune.com/queries/2162007\n",
+      "Results available at https://dune.com/queries/1886707\n"
+     ]
+    }
+   ],
    "source": [
     "# https://dune.com/queries/2162007 # OP Distributed - OP Deployed Aggregate\n",
     "query_aggregate = Query(\n",
@@ -39,9 +48,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-10 15:05:02,547 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:05:08,007 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:05:13,541 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:05:19,031 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:05:24,519 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:05:29,994 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:05:35,475 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:05:40,931 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:05:46,385 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:05:51,903 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:05:57,396 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:06:02,855 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:06:08,316 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:06:13,802 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:06:19,280 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:06:24,717 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:06:30,187 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:06:35,654 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:06:41,106 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:06:46,598 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:06:52,035 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:06:57,487 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:07:02,941 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:07:08,429 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:07:13,877 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:07:19,350 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:07:24,853 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:07:30,335 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n",
+      "2023-03-10 15:07:35,798 INFO dune_client.base_client waiting for query execution 01GV6J0XFSXK3TK05Q6221ZQQE to complete: ExecutionState.EXECUTING\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type done\n"
+     ]
+    }
+   ],
    "source": [
     "dotenv.load_dotenv()\n",
     "dune = DuneClient(os.environ[\"DUNE_API_KEY\"])\n",
@@ -54,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,18 +117,174 @@
     "df_type = pd.DataFrame(results_type.result.rows)\n",
     "df_type['last_updated'] = results_type.times.submitted_at\n",
     "\n",
-    "if not os.path.exists('csv_output'):\n",
-    "    os.makedirs('csv_output')\n",
+    "if not os.path.exists('csv_outputs'):\n",
+    "    os.makedirs('csv_outputs')\n",
     "\n",
-    "# df_agg.to_csv('csv_output/dune_op_distribution_agg.csv')\n",
-    "df_type.to_csv('csv_output/dune_op_distribution_type.csv')"
+    "# df_agg.to_csv('csv_outputs/dune_op_distribution_agg.csv')\n",
+    "df_type.to_csv('csv_outputs/dune_op_distribution_type.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>from_name</th>\n",
+       "      <th>op_deployed</th>\n",
+       "      <th>to_label</th>\n",
+       "      <th>to_type</th>\n",
+       "      <th>last_updated</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1inch</td>\n",
+       "      <td>300000</td>\n",
+       "      <td>Deployed</td>\n",
+       "      <td>Distributor</td>\n",
+       "      <td>2023-03-10 20:05:02.077384+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aelin</td>\n",
+       "      <td>880175</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2023-03-10 20:05:02.077384+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Aelin</td>\n",
+       "      <td>19827</td>\n",
+       "      <td>Project</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>2023-03-10 20:05:02.077384+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alchemix</td>\n",
+       "      <td>20386</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2023-03-10 20:05:02.077384+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alchemix</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>Deployed</td>\n",
+       "      <td>alETH/WETH: Velodrome</td>\n",
+       "      <td>2023-03-10 20:05:02.077384+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>144</th>\n",
+       "      <td>dHedge</td>\n",
+       "      <td>80000</td>\n",
+       "      <td>Deployed</td>\n",
+       "      <td>Distributor</td>\n",
+       "      <td>2023-03-10 20:05:02.077384+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>dHedge</td>\n",
+       "      <td>10219</td>\n",
+       "      <td>Deployed</td>\n",
+       "      <td>DHT/OP: Velodrome</td>\n",
+       "      <td>2023-03-10 20:05:02.077384+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>xToken Terminal / Gamma Strategies</td>\n",
+       "      <td>297025</td>\n",
+       "      <td>Deployed</td>\n",
+       "      <td>Rewards Program</td>\n",
+       "      <td>2023-03-10 20:05:02.077384+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>xToken Terminal / Gamma Strategies</td>\n",
+       "      <td>61812</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2023-03-10 20:05:02.077384+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>xToken Terminal / Gamma Strategies</td>\n",
+       "      <td>25000</td>\n",
+       "      <td>Deployed</td>\n",
+       "      <td>Rewarder</td>\n",
+       "      <td>2023-03-10 20:05:02.077384+00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>149 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              from_name op_deployed  to_label  \\\n",
+       "0                                 1inch      300000  Deployed   \n",
+       "1                                 Aelin      880175     Other   \n",
+       "2                                 Aelin       19827   Project   \n",
+       "3                              Alchemix       20386     Other   \n",
+       "4                              Alchemix       10000  Deployed   \n",
+       "..                                  ...         ...       ...   \n",
+       "144                              dHedge       80000  Deployed   \n",
+       "145                              dHedge       10219  Deployed   \n",
+       "146  xToken Terminal / Gamma Strategies      297025  Deployed   \n",
+       "147  xToken Terminal / Gamma Strategies       61812     Other   \n",
+       "148  xToken Terminal / Gamma Strategies       25000  Deployed   \n",
+       "\n",
+       "                   to_type                     last_updated  \n",
+       "0              Distributor 2023-03-10 20:05:02.077384+00:00  \n",
+       "1                     None 2023-03-10 20:05:02.077384+00:00  \n",
+       "2             Intermediate 2023-03-10 20:05:02.077384+00:00  \n",
+       "3                     None 2023-03-10 20:05:02.077384+00:00  \n",
+       "4    alETH/WETH: Velodrome 2023-03-10 20:05:02.077384+00:00  \n",
+       "..                     ...                              ...  \n",
+       "144            Distributor 2023-03-10 20:05:02.077384+00:00  \n",
+       "145      DHT/OP: Velodrome 2023-03-10 20:05:02.077384+00:00  \n",
+       "146        Rewards Program 2023-03-10 20:05:02.077384+00:00  \n",
+       "147                   None 2023-03-10 20:05:02.077384+00:00  \n",
+       "148               Rewarder 2023-03-10 20:05:02.077384+00:00  \n",
+       "\n",
+       "[149 rows x 5 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(df_type)"
    ]
