--- a/op_rewards_tracking/pull_distributions.ipynb
+++ b/op_rewards_tracking/pull_distributions.ipynb
@@ -8,12 +8,11 @@
    "source": [
     "# Based off of Cow Protocol's Dune Client: https://github.com/cowprotocol/dune-client\n",
     "import pandas as pd\n",
-    "import dotenv\n",
     "import os\n",
+    "import sys\n",
     "\n",
-    "from dune_client.types import QueryParameter\n",
-    "from dune_client.client import DuneClient\n",
-    "from dune_client.query import Query"
+    "sys.path.append('../helper_functions')\n",
+    "import duneapi_utils as d"
    ]
   },
   {
@@ -23,11 +22,7 @@
    "outputs": [],
    "source": [
     "# https://dune.com/queries/1900056/3127874\n",
-    "query = Query(\n",
-    "    name=\"Latest OP Distributions by Project\",\n",
-    "    query_id=1900056,\n",
-    ")\n",
-    "print(\"Results available at\", query.url())"
+    "df = d.df_run_duneapi_query(1900056, \"Latest OP Distributions by Project\")"
    ]
   },
   {
@@ -36,19 +31,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dotenv.load_dotenv()\n",
-    "dune = DuneClient(os.environ[\"DUNE_API_KEY\"])\n",
-    "results = dune.refresh(query)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(results.result.rows)\n",
-    "df['last_updated'] = results.times.submitted_at\n",
     "if not os.path.exists('csv_outputs'):\n",
     "    os.makedirs('csv_outputs')\n",
     "df.to_csv('csv_outputs/dune_op_distribution.csv')\n",
@@ -58,7 +40,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new-env",
+   "display_name": "py10",
    "language": "python",
    "name": "python3"
   },
@@ -72,12 +54,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7d537a1638226190f579d6fbb68604c1b09ebc740a69df557abedb49ad78e592"
+    "hash": "568c45baba86190bf65a5d0b3302bdb9b067c88c2eaacc48373a8c9b6714aa9a"
    }
   }
  },
