--- a/op_rewards_tracking/op_incentives_program_attribution.ipynb
+++ b/op_rewards_tracking/op_incentives_program_attribution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 444,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 445,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 446,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 447,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 449,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 450,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 452,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 454,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,15 +323,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 455,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# # replace 0s in 'num_op_override' with the corresponding value in 'op_deployed_net_override'\n",
+    "sum_distrib_df['og_op_deployed'] = sum_distrib_df['op_deployed'] \n",
     "# Override # OP Deployed \n",
     "sum_distrib_df['op_deployed'] = sum_distrib_df.apply(lambda x: x['num_op_override'] if x['num_op_override'] > 0 else x['op_deployed'], axis=1)\n",
     "\n",
-    "# # replace 0s in 'num_op_override' with the corresponding value in 'op_deployed_net_override'\n",
-    "# sum_distrib_df['og_op_deployed'] = sum_distrib_df['op_deployed'] \n",
     "# sum_distrib_df['op_deployed'] = np.where(sum_distrib_df['num_op_override'] == 0, sum_distrib_df['op_deployed_net_override'], sum_distrib_df['num_op_override'])\n",
     "\n",
     "# #Select all except the last 4 rows\n",
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 456,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 457,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +423,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>300000.0</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -443,7 +444,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>300000.0</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -464,7 +465,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>7.732963e+07</td>\n",
+       "      <td>0.22613</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -485,7 +486,7 @@
        "      <td>0.0</td>\n",
        "      <td>19827.0</td>\n",
        "      <td>900000.0</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>0.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -506,7 +507,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>250000.0</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -548,7 +549,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.596840e+06</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>107</th>\n",
@@ -569,7 +570,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1000000.0</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>108</th>\n",
@@ -590,7 +591,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>300000.0</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>109</th>\n",
@@ -611,7 +612,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>26.0</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>110</th>\n",
@@ -632,7 +633,7 @@
        "      <td>83334.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>600008.0</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -732,17 +733,17 @@
        "110                 83334.0                   0.0       600008.0   \n",
        "\n",
        "     net_flows_retention  \n",
-       "0           0.000000e+00  \n",
-       "1           0.000000e+00  \n",
-       "2           7.732963e+07  \n",
-       "3           0.000000e+00  \n",
-       "4           0.000000e+00  \n",
+       "0                    NaN  \n",
+       "1                    NaN  \n",
+       "2                0.22613  \n",
+       "3                0.00000  \n",
+       "4                    NaN  \n",
        "..                   ...  \n",
-       "106         1.596840e+06  \n",
-       "107         0.000000e+00  \n",
-       "108         0.000000e+00  \n",
-       "109         0.000000e+00  \n",
-       "110         0.000000e+00  \n",
+       "106                  NaN  \n",
+       "107                  NaN  \n",
+       "108                  NaN  \n",
+       "109                  NaN  \n",
+       "110                  NaN  \n",
        "\n",
        "[111 rows x 18 columns]"
       ]
