--- a/op_rewards_tracking/pull_data.ipynb
+++ b/op_rewards_tracking/pull_data.ipynb
@@ -6,11 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Based off of Cow Protocol's Dune Client: https://github.com/cowprotocol/dune-client\n",
-    "import pandas as pd\n",
-    "import os\n",
     "import sys\n",
-    "\n",
     "sys.path.append('../helper_functions')\n",
     "import duneapi_utils as d"
    ]
@@ -21,8 +17,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://dune.com/queries/1900056/3127874\n",
-    "df = d.df_run_duneapi_query(1900056, \"Latest OP Distributions by Project\")"
+    "# add any data to pull here\n",
+    "data = {\n",
+    "    1886707: \"dune_op_distribution_type\",\n",
+    "    1900056: \"dune_op_distribution\"\n",
+    "}"
    ]
   },
   {
@@ -31,16 +30,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not os.path.exists('csv_outputs'):\n",
-    "    os.makedirs('csv_outputs')\n",
-    "df.to_csv('csv_outputs/dune_op_distribution.csv')\n",
-    "display(df)"
+    "for query_id, csv_name in data.items():\n",
+    "    d.get_dune_data(query_id, csv_name)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py10",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -54,14 +51,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "568c45baba86190bf65a5d0b3302bdb9b067c88c2eaacc48373a8c9b6714aa9a"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
