add new tracking
Former-commit-id: 08d4cdca7c494fe7589da5edd03a355568819023

--- a/op_rewards_tracking/pull_data.ipynb
+++ b/op_rewards_tracking/pull_data.ipynb
@@ -20,7 +20,8 @@
     "# add any data to pull here\n",
     "data = {\n",
     "    1886707: \"dune_op_distribution_type\",\n",
-    "    1900056: \"dune_op_distribution\"\n",
+    "    1900056: \"dune_op_distribution\",\n",
+    "    2195796: \"dune_op_program_performance_summary\"\n",
     "}"
    ]
   },
